Fix top align on portfolio elements

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -73,7 +73,8 @@ body {
 .portfolio li {
   width: 500px;
   margin: 0 auto;
-  margin-bottom: 50px
+  margin-bottom: 50px;
+  vertical-align: top;
 }
 
 div.heading {
